fix(advance-table): scrollbar width

--- a/styles/AdvancedTable.scss
+++ b/styles/AdvancedTable.scss
@@ -62,6 +62,7 @@
       position: absolute;
       z-index: 100;
       overflow: hidden;
+      top: 0px;
       // box-shadow: 10px 0 16px 3px rgba(0, 0, 0, 0.2);
       .n-table.n-advance-table__body {
         width: auto;
@@ -106,6 +107,7 @@
       .n-advance-table__fixed {
         box-shadow: none;
         border: none;
+        overflow: visible;
       }
       .n-advance-table__fixed--left {
         thead {
